# forklift-logistics

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_desktop.py
app/: __init__.py  core.py  main.py
app/config/: __init__.py  constants.py  defaults.py  settings.py
app/data/: __init__.py  loaders.py  sample_scenarios.py
app/domain/: __init__.py  entities.py  enums.py  scenario.py
app/interfaces/: cli.py  desktop_app.py  visualization.py
app/optimization/: __init__.py  baseline_policies.py  objective.py  simulated_annealing.py
app/simulation/: __init__.py  metrics.py  simulator.py
app/tests/: __init__.py
tests/: test_constraints.py  test_metrics.py  test_sa.py  test_simulation.py  test_travel.py
