[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forklift-logistics"
version = "0.1.0"
description = "Discrete-event simulation and simulated annealing prototype for in-plant logistics"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Forklift Logistics Team" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "matplotlib>=3.8",
]
viz = [
  "matplotlib>=3.8",
]

[project.scripts]
forklift-logistics = "app.interfaces.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
